--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>I'm Keitumetse.</h1>
     <h2 class="programmer">A <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="mountain" src="images/mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
