--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://github.com/Zhanhu079">Github</a>
     <p class="copyright">© 2022 <span class="name">Keitumetse Sello</span>. All rights reserved.</p>
   </div>
 </body>
