--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://github.com/Zhanhu079">Github</a>
+    <a class="footer-link" href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+    <a class="footer-link" href="https://twitter.com/"><i class="fa-brands fa-square-twitter"></i></a>
+    <a class="footer-link" href="https://github.com/"><i class="fa-brands fa-square-github"></i></a>
     <p class="copyright">© 2022 <span class="name">Keitumetse Sello</span>. All rights reserved.</p>
   </div>
+  
 </body>
+  <script src="https://kit.fontawesome.com/ca50782fbd.js" crossorigin="anonymous"></script>
   <script src="index.js"></script>
 </html>
