--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.instagram.com/zhanu6t9/"><i class="fa-brands fa-square-instagram"></i></a>
-    <a class="footer-link" href="https://twitter.com/"><i class="fa-brands fa-square-twitter"></i></a>
+    <a class="footer-link" href="https://twitter.com/Keitume35497044"><i class="fa-brands fa-square-twitter"></i></a>
     <a class="footer-link" href="https://github.com/Zhanhu079"><i class="fa-brands fa-square-github"></i></a>
     <p class="copyright">© 2022 <span class="name">Keitumetse Sello</span>. All rights reserved.</p>
   </div>
